# superbill-billing-agent

./: .dockerignore  .gitignore  Dockerfile  ROBUSTNESS_STRATEGY.md  docker-compose.yaml  main.py  pyproject.toml  test_invoke.py  tmp_chromadb_check.py
config/: config.py  schema.py
context/: biopsy_context.py  general_context.py  mohs_context.py  notes_context.py  prescriptions_context.py
controller/: app.py
database/: conn.py  deps.py
src/agent/: candidate_selection_node.py  fact_extractor_node.py  graph.py  llm_node.py  nodes.py  postprocess_node.py  retrieval_node.py  self_correction_node.py  state_helpers.py
src/services/: biopsy.py  extraction.py  general.py  llm_factory.py  mohs.py  notes.py  preparation.py  prompts.py
utils/: helper.py
vectordb/: ingest.py
